fix new school js. fix line break in desc.

--- a/resources/sass/base/_base.scss
+++ b/resources/sass/base/_base.scss
@@ -51,6 +51,16 @@ body {
     }
     &--contact {
         display: block;
+        div {
+            span {
+                p {
+                    display: inline;
+                    @include screen-size('small') {
+                        display: block;
+                    }
+                }
+            }
+        }
     }
     &--about {
         display: none;
@@ -115,8 +125,8 @@ a {
         max-height: 70vh;
         max-width: 85vw;
         &.fullscreen {
-            max-height: 100vh;
-            max-width: 100vw;
+            max-height: 101vh;
+            max-width: 101vw;
         }
     }
 
